added jacoco and more tests